Expand AI governance training (SC-13708) (#1172)
* Update .gitignore

* Initial draft changes

* Edits, add images & videos

* Edits, add images

* Edits, add images

* Apply title slide background to other transition slides

* Initial plan to improve visuals

* Edits

* Edits

* Edits

* Edits

* Edits, convert .mp4 files to animated gifs

* Final edits

--- a/site/training/ai-governance/configuring-ai-workflows.qmd
+++ b/site/training/ai-governance/configuring-ai-workflows.qmd
@@ -15,7 +15,7 @@ format:
     help: true
     controls-back-arrows: visible
     transition: slide
-    theme: [default, ../assets/slides.scss, ./slides.scss]
+    theme: [../assets/slides.scss, ../assets/use-cases.scss]
     slide-number: true
     chalkboard: false
     preview-links: auto
@@ -56,107 +56,147 @@ This third module is part of a four-part series:
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-# Intake workflows {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# Intake workflows {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## What is an intake workflow? {.center}
 
-Intake workflows control how new AI systems enter your governance program.
+Intake workflows **control** how new AI systems enter your governance program. They ensure:
 
-They ensure:
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; All AI systems are registered
 
-- All AI systems are registered
-- Required information is captured
-- Initial classification is performed
-- Ownership is assigned
+[{{< fa check >}}]{.dark-pink} &ensp; Required information is captured
+
+[{{< fa check >}}]{.dark-pink} &ensp; Initial classification is performed
+
+[{{< fa check >}}]{.dark-pink} &ensp; Ownership is assigned
+:::
 
 ## Configuring intake {.center}
 
 In {{< var vm.product >}}:
 
-1. Define required fields for registration
-2. Set up validation rules
-3. Configure automatic notifications
-4. Route new registrations for review
+1. **Define** required fields for registration
+2. **Set up** validation rules
+3. **Configure** automatic notifications
+4. **Route** new registrations for review
 
-## Hands-on: Review workflow configuration {.center}
+## [Example: Risk classification workflow]{.f2} {.center .tc}
 
-1. Navigate to **Settings > Workflows**
-2. Explore the available workflow templates
-3. Identify which workflows would support intake for AI systems
+::: {.tc}
+![{{< fa magnifying-glass >}}&ensp;[Click to enlarge]{.f3}](risk-classification-workflow.png){width="35%" fig-alt="A screenshot showing a Risk Classification Workflow with model stage changes, user actions, approvals, and condition branches for different risk levels" .screenshot}
+:::
 
-# Approval workflows {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+## Risk classification workflow steps {.center}
+
+::: {.f2}
+This example intake workflow demonstrates key AI governance patterns:
+:::
+
+::: {.f3}
+- **Model Stage Change** — Sets model stage to [In Risk Classification]{.bubble}
+- **User Action v2** — Collects risk classification materials with deadline
+- **Broadcast** — Notifies stakeholders of pending risk rating
+- **Approval** — Routes to Model Validation Governance for review
+- **Condition Branch** — Different paths for High Risk, Medium Risk, or Default
+:::
+
+# Approval workflows {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Purpose of approval workflows {.center}
 
-Approval workflows ensure AI systems receive appropriate review before deployment.
+Approval workflows **ensure** AI systems receive appropriate review before deployment. They implement:
 
-They implement:
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Risk-based approval gates
 
-- Risk-based approval gates
-- Multiple approver requirements
-- Segregation of duties
-- Documented decision-making
+[{{< fa check >}}]{.dark-pink} &ensp; Multiple approver requirements
+
+[{{< fa check >}}]{.dark-pink} &ensp; Segregation of duties
+
+[{{< fa check >}}]{.dark-pink} &ensp; Documented decision-making
+:::
 
 ## Designing approval flows {.center}
 
 Consider these design principles:
 
+::: {.f2 .mt4}
 | Risk level | Approval requirements |
 |------------|----------------------|
 | High-risk | Multiple approvers, governance committee |
 | Medium-risk | Manager + compliance review |
 | Low-risk | Single approver |
+:::
 
 ## Configuring approvals {.center}
 
+:::: {.columns}
+
+::: {.column width="50%" .pr3}
 {{< var vm.product >}} supports:
 
 - Workflow states and transitions
 - Role-based approval authorities
 - Sequential and parallel approvals
 - Approval deadline tracking
+:::
 
-# Human oversight controls {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+::: {.column width="50%" .pl3 .f3 .mt3}
+![Approval step configuration](workflow-approval-step-configuration.png){fig-alt="A screenshot showing approval step configuration with role selection in the workflow builder" .screenshot .tilt-left}
+:::
+
+::::
+
+# Human oversight controls {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Regulatory context {.center}
 
-The EU AI Act (Article 14) requires human oversight for high-risk AI systems.
+The EU AI Act (Article 14) **requires** human oversight** for high-risk AI systems. Human oversight includes:
 
-Human oversight includes:
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Ability to understand AI outputs
 
-- Ability to understand AI outputs
-- Capability to intervene
-- Authority to override decisions
-- Mechanisms for feedback
+[{{< fa check >}}]{.dark-pink} &ensp; Capability to intervene
+
+[{{< fa check >}}]{.dark-pink} &ensp; Authority to override decisions
+
+[{{< fa check >}}]{.dark-pink} &ensp; Mechanisms for feedback
+:::
 
 ## Implementing oversight {.center}
 
 Use {{< var vm.product >}} to document and enforce oversight:
 
-- Record oversight requirements in documentation
-- Configure review workflows for AI outputs
-- Track intervention decisions
-- Maintain evidence of human involvement
+- **Record** oversight requirements in documentation
+- **Configure** review workflows for AI outputs
+- **Track** intervention decisions
+- **Maintain** evidence of human involvement
 
 ## Review workflows {.center}
 
 Set up periodic review workflows:
 
-1. Define review frequency by risk tier
-2. Configure reviewer assignments
-3. Track review completion
-4. Escalate overdue reviews
+1. **Define** review frequency by risk tier
+2. **Configure** reviewer assignments
+3. **Track** review completion
+4. **Escalate** overdue reviews
 
-# Escalations {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# Escalations {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Escalation paths {.center}
 
 Configure escalations for:
 
-- Overdue approvals
-- High-risk findings
-- Policy violations
-- Compliance incidents
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Overdue approvals
+
+[{{< fa check >}}]{.dark-pink} &ensp; High-risk validation issues
+
+[{{< fa check >}}]{.dark-pink} &ensp; Policy violations
+
+[{{< fa check >}}]{.dark-pink} &ensp; Compliance incidents
+:::
 
 Escalation ensures issues reach appropriate decision-makers.
 
