--- a/site/training/ai-governance/managing-ai-use-cases.qmd
+++ b/site/training/ai-governance/managing-ai-use-cases.qmd
@@ -15,7 +15,7 @@ format:
     help: true
     controls-back-arrows: visible
     transition: slide
-    theme: [default, ../assets/slides.scss, ./slides.scss]
+    theme: [../assets/slides.scss, ../assets/use-cases.scss]
     slide-number: true
     chalkboard: false
     preview-links: auto
@@ -56,81 +56,126 @@ This second module is part of a four-part series:
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-# Use case inventories {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# Use case inventories {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## What is a use case inventory? {.center}
 
-A centralized registry of all AI systems and their purposes.
+A centralized registry of all AI systems and their purposes, use case inventories help you:
 
-Use case inventories help you:
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Understand where AI is used
 
-- Understand where AI is used
-- Track ownership and accountability
-- Assess aggregate risk exposure
-- Demonstrate governance to regulators
+[{{< fa check >}}]{.dark-pink} &ensp; Track ownership and accountability
+
+[{{< fa check >}}]{.dark-pink} &ensp; Assess aggregate risk exposure
+
+[{{< fa check >}}]{.dark-pink} &ensp; Demonstrate governance to regulators
+:::
 
 ## Inventory fields {.center}
 
+:::: {.columns}
+
+::: {.column width="50%" .pr3 .f2}
 Configure custom inventory fields for AI governance:
 
+::: {.f4 .mt5}
 | Field type | Examples |
 |------------|----------|
 | Classification | Risk tier, impact level |
 | Ownership | Use case owner, business sponsor |
 | Purpose | Intended use, use boundaries |
 | Status | Lifecycle stage, approval status |
+:::
 
-## Hands-on: Explore the inventory {.center}
+:::
 
-1. Log in to {{< var vm.product >}}
-2. Navigate to **Model Inventory**
-3. Review the columns and filters available
-4. Consider which fields would support your governance needs
+::: {.column width="50%" .pl3 .tilt-left .f3}
+![Custom field configuration](custom-fields.gif){fig-alt="A short video showing custom field configuration in ValidMind settings" .screenshot}
+:::
 
-# Risk classification {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+::::
+
+## The inventory in action {.center}
+
+:::: {.columns}
+
+::: {.column width="60%" .pr3 .tilt-right .mt5 .f3}
+![The ValidMind inventory](intentory-in-action.gif){fig-alt="A short video showing the ValidMind inventory with AI use cases displaying tier, model owner, and model stage fields" .screenshot}
+:::
+
+::: {.column width="40%" .pl3 .nt2 .f2}
+The **Inventory** displays AI use cases with:
+
+- **Tier** — Risk classification level
+- **Model owner** — Accountability assignment
+- **Model stage** — Current lifecycle stage
+:::
+
+::::
+
+# Risk classification {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Why classify risk? {.center}
 
-Risk classification enables **proportionate governance**.
+Risk classification enables **proportionate governance**. Higher-risk AI systems receive:
 
-Higher-risk AI systems receive:
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; More rigorous review
 
-- More rigorous review
-- Additional documentation requirements
-- Enhanced monitoring
-- Stricter approval gates
+[{{< fa check >}}]{.dark-pink} &ensp; Additional documentation requirements
+
+[{{< fa check >}}]{.dark-pink} &ensp; Enhanced monitoring
+
+[{{< fa check >}}]{.dark-pink} &ensp; Stricter approval gates
+:::
 
 ## Classification schemes {.center}
 
 Align your classification to relevant regulations:
 
+::: {.mt4 .f2}
 | Framework | Classification levels |
 |-----------|----------------------|
 | EU AI Act | Prohibited, high-risk, limited-risk, minimal-risk |
 | Internal | Critical, high, medium, low |
-| Tiered | Tier 1, Tier 2, Tier 3 |
+| Tiered | Tier 1, Tier 2, Tier 3, Tier 4 |
+:::
 
 ## Configuring risk tiers {.center}
 
+:::: {.columns}
+
+::: {.column width="50%" .pr3 .f2}
 In {{< var vm.product >}}, you can:
 
-1. Add custom fields for risk classification
-2. Configure different workflows per tier
-3. Apply documentation templates by tier
-4. Generate reports filtered by risk level
+1. **Add custom fields** for risk classification
+2. **Configure different workflows** per tier
+3. **Apply documentation templates** by tier
+4. **Generate reports** filtered by risk level
+:::
 
-# Impact assessments {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+::: {.column width="50%" .pl3 .mt4}
+![Risk overview](analytics-risk-overview.png){fig-alt="A screenshot showing risk tier field configuration in ValidMind" .screenshot .tilt-left}
+:::
+
+::::
+
+# Impact assessments {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Purpose of impact assessments {.center}
 
-Impact assessments evaluate potential risks and harms from AI deployment.
+Impact assessments evaluate potential risks and harms from AI deployment. They document:
 
-They document:
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Who is affected by the AI system
 
-- Who is affected by the AI system
-- What decisions the AI influences
-- Potential for harm or discrimination
-- Mitigating controls
+[{{< fa check >}}]{.dark-pink} &ensp; What decisions the AI influences
+
+[{{< fa check >}}]{.dark-pink} &ensp; Potential for harm or discrimination
+
+[{{< fa check >}}]{.dark-pink} &ensp; Mitigating controls
+:::
 
 ## Impact assessment process {.center}
 
@@ -144,24 +189,25 @@ They document:
 
 Use {{< var vm.product >}} to:
 
-- Attach impact assessment documentation
-- Track assessment completion status
-- Route assessments through approval workflows
-- Maintain audit trail of governance decisions
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Attach impact assessment documentation
 
-# Lifecycle stages {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+[{{< fa check >}}]{.dark-pink} &ensp; Track assessment completion status
+
+[{{< fa check >}}]{.dark-pink} &ensp; Route assessments through approval workflows
+
+[{{< fa check >}}]{.dark-pink} &ensp; Maintain audit trail of governance decisions
+:::
+
+# Lifecycle stages {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## AI governance lifecycle {.center}
 
-```{mermaid}
-graph LR
-    A[Intake] --> B[Assessment]
-    B --> C[Approval]
-    C --> D[Deployment]
-    D --> E[Monitoring]
-    E --> F[Review]
-    F --> B
-```
+![](ai-governance-lifecycle.svg){fig-alt="Diagram showing the eight stages of the AI governance lifecycle: Intake (use case owner registers AI system), Assessment (Governance / Risk classify and assess), Documentation (Owner / Risk document model and use case), Validation (Validator test and validate model), Approval (Committee / Compliance sign-off) highlighted in magenta, Deployment (Owner / IT deploy to production), Monitoring (Risk / Ops ongoing oversight), Review (Governance / Audit periodic review), with a dashed arrow from Review back to re-assess or re-approve."}
+
+::: {.f3 .nt4}
+The AI governance lifecycle moves from intake and risk assessment through documentation and validation to a formal approval gate, then deployment, ongoing monitoring, and periodic review — with a feedback loop so systems can be re-assessed and re-approved when needed.
+:::
 
 ## Managing stage transitions {.center}
 
