--- a/site/training/ai-governance/understanding-ai-governance.qmd
+++ b/site/training/ai-governance/understanding-ai-governance.qmd
@@ -15,7 +15,7 @@ format:
     help: true
     controls-back-arrows: visible
     transition: slide
-    theme: [default, ../assets/slides.scss, ./slides.scss]
+    theme: [../assets/slides.scss, ../assets/use-cases.scss]
     slide-number: true
     chalkboard: false
     preview-links: auto
@@ -55,58 +55,41 @@ This first module is part of a four-part series:
 
 :::
 
-First, let's make sure you can log in to {{< var vm.product >}}.
-
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-## Before you begin {.center}
-
-::: {.panel-tabset}
-
-### Registration
-
-To continue, you need to have been [onboarded](ai-governance-register.qmd#register){target="_blank"} onto {{< var validmind.training >}}.
-
-<br>
-
-:::: {.tc .mt5 .f2 .embed}
-Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() to continue.
-
-:::
-
-{{< include /training/common-slides/_log-in.qmd >}}
-
-:::
-
-# What is AI governance? {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# What is AI governance? {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Defining AI governance {.center}
 
-AI governance is the **organizational framework** for directing and overseeing how AI is designed, deployed, and used.
+::: {.f2}
+AI governance is the **organizational framework** for directing and overseeing how AI is designed, deployed, and used. It sets:
 
-It sets:
+[{{< fa check >}}]{.dark-pink}&ensp;Policy and standards
 
-- Policy and standards
-- Accountability and decision rights
-- Ethics and compliance requirements
-- Lifecycle controls
-- Ongoing oversight
+[{{< fa check >}}]{.dark-pink}&ensp;Accountability and decision rights
+
+[{{< fa check >}}]{.dark-pink}&ensp;Lifecycle controls
+
+[{{< fa check >}}]{.dark-pink}&ensp;Ongoing oversight
+:::
+
 
 ## Unit of management {.center}
 
+::: {.f2}
 In AI governance, the primary unit of management is the **AI system** or **AI use case** — not the individual model.
 
-:::: {.flex .flex-wrap .justify-around}
+:::: {.flex .flex-wrap .justify-around .mt4}
 
-::: {.w-40-ns}
-**AI governance focuses on:**
+::: {.w-40-ns .content-block-teal}
+**Focuses on:**
 
 - How AI is used
 - Impact on stakeholders
 - Organizational accountability
 :::
 
-::: {.w-40-ns}
+::: {.w-40-ns .content-block-teal}
 **Applies to:**
 
 - Model-based AI
@@ -116,38 +99,55 @@ In AI governance, the primary unit of management is the **AI system** or **AI us
 
 ::::
 
-# AI governance vs MRM {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+:::
+
+# AI governance vs MRM {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Parallel use cases {.center}
 
+::: {.f2}
 AI governance and model risk management (MRM) are **parallel use cases** — not subsets of each other.
+:::
 
+::: {.f3 .mt4}
 | Aspect | AI Governance | MRM |
-|--------|---------------|-----|
+|----|-------|-------|
 | Unit of management | AI system / use case | Model |
 | Objective | Organizational oversight | Technical risk control |
 | Scope | Broad — ethics, compliance | Narrow — performance, validation |
+:::
 
 ## Relationship {.center}
 
-AI governance and MRM **overlap** for machine learning models embedded in AI systems.
+::: {.f2}
+AI governance and MRM may also **overlap** with some shared artifacts:
 
-The overlap may produce shared artifacts:
+:::: {.columns}
 
-- Inventories
-- Approvals
-- Monitoring evidence
+::: {.column width="40%"}
+- Inventory
+- Approval workflows
 - Issue tracking
+- Ongoing monitoring
+:::
 
-Organizations may coordinate these use cases or manage them separately.
+::: {.column width="60%" .f3 .tc .nt3}
+![](ai-governance-mrm-overlap.svg){width="100%" fig-alt="Diagram: AI Governance and MRM as overlapping circles with shared artifacts in the overlap."}
+:::
 
-# Key terminology {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+::::
+
+Organizations can coordinate these use cases or manage them separately. **{{< var vm.product >}} supports both approaches**.
+
+:::
+
+# Key terminology {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## AI governance terms {.center}
 
-:::: {.flex .flex-wrap .justify-around}
+:::: {.flex .flex-wrap .justify-around .mt4}
 
-::: {.w-40-ns}
+::: {.w-40-ns .content-block-teal}
 **Units of oversight:**
 
 - AI system
@@ -156,7 +156,7 @@ Organizations may coordinate these use cases or manage them separately.
 - Automated decision system
 :::
 
-::: {.w-40-ns}
+::: {.w-40-ns .content-block-teal}
 **Risk framing:**
 
 - AI risk
@@ -169,9 +169,9 @@ Organizations may coordinate these use cases or manage them separately.
 
 ## Classification and lifecycle {.center}
 
-:::: {.flex .flex-wrap .justify-around}
+:::: {.flex .flex-wrap .justify-around .mt4}
 
-::: {.w-40-ns}
+::: {.w-40-ns .content-block-teal}
 **Classification:**
 
 - Risk tier
@@ -180,7 +180,7 @@ Organizations may coordinate these use cases or manage them separately.
 - Prohibited / high-risk / limited-risk
 :::
 
-::: {.w-40-ns}
+::: {.w-40-ns .content-block-teal}
 **Lifecycle:**
 
 - Intake
@@ -192,17 +192,32 @@ Organizations may coordinate these use cases or manage them separately.
 
 ::::
 
-# Platform orientation {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# Platform orientation {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## {{< var vm.product >}} for AI governance {.center}
 
+:::: {.columns}
+
+::: {.column width="50%" .pr3 .f2}
 {{< var vm.product >}} supports AI governance through:
 
-- **Inventory** — Track AI systems and use cases
-- **Custom fields** — Configure risk tiers, impact levels, ownership
-- **Workflows** — Intake, approval, and deployment processes
-- **Documentation** — Generate governance documentation
-- **Dashboards** — Monitor compliance across your portfolio
+::: {.f3}
+- **Inventory** — Track AI systems use cases, owners, stakeholders, and more
+- **Custom fields** — Configure risk tiers, impact levels, and more
+- **Workflows** — Intake, approval, and lifecycle processes
+- **Documentation** — Run testing and generate documentation
+- **Validation** - Identify and track issues
+- **Dashboards** — Monitor compliance
+:::
+:::
+
+::: {.column width="50%" .pl3 .pt3 .f3}
+![The Inventory](inventory-overview.png){fig-alt="A screenshot of the ValidMind Platform showing the main interface" .screenshot .tilt-left}
+
+- **Document Checker** — Assess model documentation against regulations and internal policies
+:::
+
+::::
 
 ## Next steps {.center}
 
