--- a/site/training/ai-governance/compliance-and-oversight.qmd
+++ b/site/training/ai-governance/compliance-and-oversight.qmd
@@ -15,7 +15,7 @@ format:
     help: true
     controls-back-arrows: visible
     transition: slide
-    theme: [default, ../assets/slides.scss, ./slides.scss]
+    theme: [../assets/slides.scss, ../assets/use-cases.scss]
     slide-number: true
     chalkboard: false
     preview-links: auto
@@ -50,24 +50,26 @@ This fourth module is part of a four-part series:
 1. [Regulatory mapping](#regulatory-mapping)
 2. [Dashboards and reporting](#dashboards-and-reporting)
 3. [Audit evidence](#audit-evidence)
-4. [Ongoing compliance](#ongoing-compliance)
+4. [Continuous compliance](#continuous-compliance)
 
 :::
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-# Regulatory mapping {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# Regulatory mapping {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Understanding requirements {.center}
 
-Key AI governance regulations include:
+Key governance regulations include:
 
+::: {.f2 .mt4}
 | Regulation | Jurisdiction | Focus |
 |------------|--------------|-------|
-| EU AI Act | European Union | Risk-based AI regulation |
-| SR 11-7 | United States | Model risk management |
-| SS1/23 | United Kingdom | MRM principles |
-| E-23 | Canada | Enterprise-wide MRM |
+| [EU AI Act](https://eur-lex.europa.eu/eli/reg/2024/1689){target="_blank"} | European Union | Risk-based AI regulation |
+| [SR 11-7](https://www.federalreserve.gov/supervisionreg/srletters/sr1107.htm){target="_blank"} | United States | Model risk management |
+| [SS1/23](https://www.bankofengland.co.uk/prudential-regulation/publication/2023/may/model-risk-management-principles-for-banks-ss){target="_blank"} | United Kingdom | MRM principles |
+| [E-23](https://www.osfi-bsif.gc.ca/en/guidance/guidance-library/guideline-e-23-model-risk-management-2027){target="_blank"} | Canada | Enterprise-wide MRM & AI/ML risk |
+:::
 
 ## Mapping to {{< var vm.product >}} {.center}
 
@@ -76,116 +78,227 @@ Each regulation maps to platform capabilities:
 - **Inventory** — Registration and classification requirements
 - **Documentation** — Technical documentation articles
 - **Workflows** — Approval and oversight processes
-- **Monitoring** — Ongoing compliance requirements
+- **Monitoring** — Continuous compliance requirements
 
-## Implementation guides {.center}
+## [Implementation guides]{.hidden} {.center}
 
+:::: {.columns}
+
+::: {.column width="50%" .pl3 .pr3}
+
+::: {.pl4 .mb4}
+[Put Governance into Practice]{.f1 .b style="color: #DE257E;"}
+
+::: {.f3}
+Use our implementation guides for:
+:::
+
+::: {.f4 .pl3 .pt2}
+[[AI Governance<br>[[[EU AI ACT]{.green}]{.bubble}]{.f5}](/about/use-cases/ai-governance.qmd){target="_blank"}]{.button .shadow-5-ns .f4 .content-tile style="width: 100%;"}
+
+[[Model Risk Management<br>[[[SR 11-7]{.green}]{.bubble} [[SS1/23]{.green}]{.bubble} [[E-23]{.green}]{.bubble}]{.f5}](/about/use-cases/model-risk-management.qmd){target="_blank"}]{.button .shadow-5-ns .f4 .content-tile style="width: 100%;"}
+:::
+:::
+
+:::
+
+::: {.column width="50%" .pl5 .pr2 .tilt-left}
+
+::: {.pl4 .mb4 .bg-dark-green .white .ba .pa3 .br3 .shadow-5-ns .o-90}
+[{{< fa lightbulb >}}&ensp;What these guides cover]{.f3 .b}
+
+::: {.f4}
+- Inventory setup, custom fields, risk classification
+- Documentation templates aligned to frameworks
+- Automated testing for data quality and accuracy
+- Independent validation, effective challenge, remediation
+- Ongoing monitoring and drift detection
+- Governance roles and approval workflows
+- Audit trails for compliance evidence
+:::
+:::
+
+:::
+
+::::
+<!-- 
 {{< var vm.product >}} provides implementation guides for:
 
-- [EU AI Act](/about/use-cases/eu-ai-act.qmd){target="_blank"}
-- [SR 11-7](/about/use-cases/sr-11-7.qmd){target="_blank"}
-- [SS1/23](/about/use-cases/ss1-23.qmd){target="_blank"}
-- [E-23](/about/use-cases/e-23.qmd){target="_blank"}
+- [AI governance](/about/use-cases/ai-governance.qmd){target="_blank" .button}
+- [EU AI Act](/about/use-cases/eu-ai-act.qmd){target="_blank" .button}
+- [SR 11-7](/about/use-cases/sr-11-7.qmd){target="_blank" .button}
+- [SS1/23](/about/use-cases/ss1-23.qmd){target="_blank" .button}
+- [E-23](/about/use-cases/e-23.qmd){target="_blank" .button} -->
 
-# Dashboards and reporting {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# Dashboards and reporting {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Governance dashboards {.center}
 
+:::: {.columns}
+
+::: {.column width="50%" .pr3}
 Dashboards provide visibility into:
 
+::: {.f2}
 - AI system portfolio overview
 - Risk distribution across tiers
 - Workflow status and bottlenecks
 - Compliance metrics
+:::
+:::
+
+::: {.column width="50%" .pl3 .mt5 .f3}
+![Analytics dashboard](analytics-dashboard.png){fig-alt="A screenshot showing the ValidMind Analytics view with portfolio overview and compliance metrics" .screenshot .tilt-left}
+:::
+
+::::
 
 ## Configuring dashboards {.center}
 
-In {{< var vm.product >}}:
+The **Analytics** section provides:
 
-1. Navigate to **Analytics**
-2. Select or create dashboard views
-3. Configure widgets for key metrics
-4. Set up automatic refresh and sharing
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Pre-built dashboards for governance oversight
+
+[{{< fa check >}}]{.dark-pink} &ensp; Customizable widgets for key metrics
+
+[{{< fa check >}}]{.dark-pink} &ensp; Filters by risk tier, status, and ownership
+
+[{{< fa check >}}]{.dark-pink} &ensp; Export options for board reporting
+:::
 
 ## Reporting {.center}
 
 Generate reports for:
 
-- Board and executive oversight
-- Regulatory submissions
-- Internal audit
-- Compliance monitoring
+:::: {.flex .flex-wrap .justify-around .mt4}
 
-# Audit evidence {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+::: {.w-40-ns .content-block-teal .mb3}
+**Executive oversight**
+:::
+
+::: {.w-40-ns .content-block-teal .mb3}
+**Regulatory submissions**
+:::
+
+::: {.w-40-ns .content-block-teal .mt3}
+**Internal & external audits**
+:::
+
+::: {.w-40-ns .content-block-teal .mt3}
+**Compliance monitoring**
+:::
+
+::::
+
+# Audit evidence {background-image="../assets/digitalspace-colours.svg" .title-accent}
 
 ## Types of audit evidence {.center}
 
 {{< var vm.product >}} automatically captures:
 
+::: {.f2 .mt4}
 | Evidence type | Description |
 |--------------|-------------|
 | Registration records | AI system registration and updates |
 | Approval history | Who approved what, when |
 | Documentation | Technical and governance documentation |
 | Change history | All modifications with timestamps |
+:::
 
 ## Generating evidence {.center}
 
 To prepare for audits:
 
-1. Export documentation and reports
-2. Generate activity logs
-3. Produce compliance summaries
-4. Package evidence for auditors
+1. **Export** documentation and reports
+2. **Generate** activity logs
+3. **Produce** compliance summaries
+4. **Package** evidence for auditors
 
 ## Maintaining audit readiness {.center}
 
 Best practices:
 
-- Keep documentation current
-- Complete workflows promptly
-- Document decisions and rationale
-- Perform periodic self-assessments
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Keep documentation current
 
-# Ongoing compliance {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+[{{< fa check >}}]{.dark-pink} &ensp; Complete workflows promptly
 
-## Continuous monitoring {.center}
+[{{< fa check >}}]{.dark-pink} &ensp; Document decisions and rationale
 
-Ongoing compliance requires:
+[{{< fa check >}}]{.dark-pink} &ensp; Perform periodic self-assessments
+:::
+
+# Continuous compliance {background-image="../assets/digitalspace-colours.svg" .title-accent}
+
+## Ongoing monitoring {.center}
+
+:::: {.columns}
+
+::: {.column width="50%" .f2 .pr3}
+Continuous compliance requires:
 
 - Regular review of AI systems
 - Performance monitoring
 - Change tracking
 - Issue management
+:::
+
+::: {.column width="50%" .pl3 .tr .f3 .nt3 .tilt-left}
+![Ongoing monitoring documentation](../assets/vm-ongoing-monitoring.gif){width="80%" fig-alt="An animation of ongoing model monitoring being scrolled through on the ValidMind Platform showing performance metrics and potential issues" .screenshot}
+
+![Identify potential issues early](../assets/target-prediction-distribution-plot-zoomed.png){width="80%" fig-alt="A screenshot of a graph that shows potential data drift over time" .screenshot}
+:::
+
+:::: 
 
 ## Periodic reviews {.center}
 
+:::: {.columns}
+
+::: {.column width="55%" .pr3}
 Configure periodic reviews:
 
-1. Set review frequencies by risk tier
-2. Assign reviewers
-3. Track completion
-4. Document review outcomes
+- Set review frequencies by risk tier
+- Assign reviewers
+- Track completion
+- Document review outcomes
+
+:::
+
+::: {.column width="45%" .pl3 .tr .nt3 .tilt-left .f3}
+![Periodic review workflow](workflows-periodic-review.png){fig-alt="A screenshot showing the ValidMind Periodic Review workflow with frequency, reviewer assignments, completion tracking, and document outcomes" .screenshot}
+:::
+
+::::
 
 ## Staying current {.center}
 
-AI regulations evolve. Stay current by:
+AI regulations **evolve**. Stay current by:
 
-- Monitoring regulatory updates
-- Updating classification criteria
-- Revising documentation templates
-- Training staff on changes
+::: {.mt4}
+[{{< fa check >}}]{.dark-pink} &ensp; Monitoring regulatory updates
+
+[{{< fa check >}}]{.dark-pink} &ensp; Updating classification criteria
+
+[{{< fa check >}}]{.dark-pink} &ensp; Revising documentation templates
+
+[{{< fa check >}}]{.dark-pink} &ensp; Training staff on changes
+:::
 
 ## Course completion {.center}
 
-Congratulations on completing **AI Governance**!
+Congratulations on completing **AI Governance**! You have learned:
 
-You have learned:
+::: {.mt4 .f2 .mb5}
+[{{< fa check >}}]{.dark-pink} &ensp; AI governance concepts and terminology
 
-- AI governance concepts and terminology
-- How to manage AI use cases
-- Workflow configuration for governance
-- Compliance and oversight practices
+[{{< fa check >}}]{.dark-pink} &ensp; How to manage AI use cases
+
+[{{< fa check >}}]{.dark-pink} &ensp; Workflow configuration for governance
+
+[{{< fa check >}}]{.dark-pink} &ensp; Compliance and oversight practices
+:::
 
 ::: {.tc}
 [Return to AI Governance](ai-governance-register.qmd){.button target="_blank"}
