Add initial draft

--- a/site/guide/integrations/managing-integrations.qmd
+++ b/site/guide/integrations/managing-integrations.qmd
@@ -14,6 +14,7 @@ listing:
     contents:
       - manage-secrets.qmd 
       - configure-connections.qmd
+      - configure-analytics-exports.qmd
       - implement-custom-integrations.qmd
       - link-external-models.qmd
       - integrations-examples.qmd
@@ -45,7 +46,7 @@ graph TD
 
 ### Analytics and reporting
 
-Access built-in analytics and dashboards. Or, import analytics data into external reporting tools to build unified reports that combine {{< var vm.product >}} insights with other sources.[^1]
+Access built-in analytics and dashboards. Or, import analytics data into external reporting tools to build unified reports that combine {{< var vm.product >}} insights with other sources. Schedule exports of analytics datasets to cloud storage for BI tools like Tableau, Snowflake, and Looker.[^1][^6]
 
 **Supported**
 
@@ -232,3 +233,4 @@ Link to tickets in external systems and keep them synchronized. Attach tickets t
 [^3]: [Introduction to workflows](/guide/workflows/introduction-to-workflows.qmd)
 [^4]: [Public REST API](/reference/validmind-rest-api-vm.qmd)
 [^5]: [Testing & documentation](/developer/validmind-library.qmd)
+[^6]: [Configure analytics exports](/guide/integrations/configure-analytics-exports.qmd)
