--- a/site/guide/integrations/configure-analytics-exports.qmd
+++ b/site/guide/integrations/configure-analytics-exports.qmd
@@ -7,7 +7,7 @@ date: last-modified
 ---
 <!-- Shortcut: 14706 -->
 
-Configure scheduled exports of analytics datasets to cloud storage so BI tools such as Tableau, Snowflake, and Looker can consume models, findings, and workflow metrics in your preferred format.
+Configure scheduled exports of analytics datasets to cloud storage so that BI tools such as Tableau, Snowflake, and Looker can consume models, findings, and workflow metrics in your preferred format.
 
 ::: {.attn}
 
@@ -15,32 +15,26 @@ Configure scheduled exports of analytics datasets to cloud storage so BI tools s
 
 - [x] {{< var link.login >}}
 - [x] You can manage workspace settings, including integrations.[^1]
-- [x] For cloud destinations, the required credentials exist as secrets (for example, AWS access keys) in Integration Secrets.[^2]
+- [x] For cloud destinations, the required credentials exist in Integration Secrets (example: AWS access keys).[^2]
 
 :::
 
-## Open Analytics Exports
+## Create an analytics export
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
 2. Under Integrations, select **Analytics Exports**.
 
-   The Analytics Export Configurations page opens. From here you create and manage scheduled exports.
+3. On the Analytics Exports page, click **{{< fa plus >}} Create Analytics Export**.
 
-![Settings page with Integrations and Analytics Exports highlighted.](analytics-exports-settings.png){fig-alt="Settings page showing Integrations section with Analytics Exports option highlighted." .screenshot}
-
-## Create an analytics export
-
-1. On the Analytics Exports page, click **{{< fa plus >}} Create Analytics Export**.
-
-2. **Select datasets** — Choose which analytics datasets to export:
+4. **Select datasets** — Choose which analytics datasets to export:
 
    - In **Datasets**, select one or more datasets (for example, Inventory Models, Artifact - Validation Issue, Artifact - Change Management Record, Artifact - Model Limitation, Artifact - Policy Exception).
    - Click **Next >**.
 
 ![Create Analytics Export modal, step 1: Select Datasets with datasets dropdown.](analytics-exports-create-step1-datasets.png){fig-alt="Create Analytics Export modal showing Select Datasets step and datasets dropdown." .screenshot}
 
-3. **Configure destination** — Set the cloud storage destination and output settings:
+5. **Configure destination** — Set the cloud storage destination and output settings:
 
    - **[destination type]{.smallcaps}** — Choose **Amazon S3**, **Google Cloud Storage**, or **Azure Blob Storage** (when available).
    - **[access key id]{.smallcaps}** — Select the secret that holds the access key or equivalent credential for the destination.
@@ -53,7 +47,7 @@ Configure scheduled exports of analytics datasets to cloud storage so BI tools s
 
 ![Create Analytics Export modal, step 2: Configure Destination with destination type, bucket, output path, and format.](analytics-exports-create-step2-destination.png){fig-alt="Create Analytics Export modal showing Configure Destination step with cloud storage and output settings." .screenshot}
 
-4. **Set schedule** — Define how often to export:
+6. **Set schedule** — Define how often to export:
 
    - **[schedule]{.smallcaps}** — Choose the frequency (for example, **Daily**).
    - **[time (utc)]{.smallcaps}** — Choose the time of day in UTC (for example, 12:00 am).
@@ -71,4 +65,5 @@ The export is created and runs on the schedule you set. Data is written to the c
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
 [^2]: [Manage secrets](/guide/integrations/manage-secrets.qmd)
