--- a/site/guide/integrations/configure-analytics-exports.qmd
+++ b/site/guide/integrations/configure-analytics-exports.qmd
@@ -82,9 +82,9 @@ You see the destination, schedule, datasets, and next run for that export.
 
 4. When the **{{< fa ellipsis-vertical >}}** menu appears, click it and select **{{< fa pen >}} Edit**.
 
-5. In the modal, adjust datasets, destination, or schedule as in [Create an analytics export](#create-an-analytics-export), then click **Update**.
+5. In the modal, adjust datasets, destination, or schedule, then click **Save Changes**.
 
-## Run analytics exports now
+## Run analytics exports manually
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
@@ -94,7 +94,7 @@ You see the destination, schedule, datasets, and next run for that export.
 
 4. When the **{{< fa ellipsis-vertical >}}** menu appears, click it and select **{{< fa play >}} Run Now**.
 
-A one-off export runs in addition to the scheduled runs.
+A one-off export runs in addition to the scheduled runs. The status for a run is shown on the export configuration row or in the run history.
 
 ## View run history
 
@@ -106,9 +106,9 @@ A one-off export runs in addition to the scheduled runs.
 
 4. When the **{{< fa ellipsis-vertical >}}** menu appears, click it and select **{{< fa history >}} View Run History**.
 
-You see past runs and their status.
+You see past runs with their status, start time, duration, rows exported, and files written.
 
-## Disable analytics exports
+## Disable or enable analytics exports
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
@@ -116,13 +116,14 @@ You see past runs and their status.
 
 3. Hover over the export you want to pause.
 
-4. When the **{{< fa ellipsis-vertical >}}** menu appears, click it and select **{{< fa bolt >}} Disable**.
+4. When the **{{< fa ellipsis-vertical >}}** menu appears, click it and select **{{< fa bolt >}} Disable** or **{{< fa bolt >}} Enable**, depending on the current setting.
 
-The export stops running until you re-enable it from the same menu.
+The export stops or starts running depending on the action you take.
 
-## Delete analytics exports
+## Delete analytics export configurations
 
-::: {.callout-warning title="Deleting an export is permanent."}
+::: {.callout-warning title="Deleting an analytics export configuration is permanent."}
+Data you exported previously will remain in the cloud storage destination unchanged.
 :::
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
@@ -131,14 +132,14 @@ The export stops running until you re-enable it from the same menu.
 
 3. Hover over the export you want to remove.
 
-4. When the **{{< fa ellipsis-vertical >}}** menu appears, click it and select **{{< fa trash >}} Delete**.
+4. When the **{{< fa ellipsis-vertical >}}** menu appears, click it and select **Delete**.
 
 5. In the confirmation dialog, select **OK** to confirm deletion.
 
 ## What's next
 
-- Ensure credentials stay valid by rotating secrets when required and updating the export configuration if you change secrets.[^2]
 - Use your BI tool to connect to the same bucket and path to build reports from the exported datasets.
+- Ensure credentials stay valid by rotating secrets when required and updating the export configuration if you change secrets.[^2]
 
 <!-- FOOTNOTES -->
 
