--- a/site/guide/integrations/configure-analytics-exports.qmd
+++ b/site/guide/integrations/configure-analytics-exports.qmd
@@ -36,7 +36,7 @@ Configure scheduled exports of analytics datasets to cloud storage so that BI to
    - Inventory Models
 
 ::: {.column-margin}
-![Create Analytics Export modal, step 1: Select Datasets with datasets dropdown.](analytics-exports-create-step1-datasets.png){fig-alt="Create Analytics Export modal showing Select Datasets step and datasets dropdown." .screenshot}
+![Selecting datasets](configure-analytics-export-step-1.png){fig-alt="Create Analytics Export modal showing Select Datasets step and datasets dropdown." .screenshot}
 :::
 
 5. Click **Next** {{< fa angle-right >}}.
@@ -51,12 +51,22 @@ Configure scheduled exports of analytics datasets to cloud storage so that BI to
    - **[format]{.smallcaps}** — Choose **Parquet**, **CSV**, or **JSON Lines**.
    - **[test connection]{.smallcaps}** (optional) — Click to verify the destination can be accessed.
 
+
+::: {.column-margin}
+![Configuring your cloud storage destination](configure-analytics-export-step-2.png){fig-alt="Create Analytics Export modal showing Configure Destination step with cloud storage and output settings." .screenshot}
+:::
+
 7. Click **Next** {{< fa angle-right >}}.
 
 8. Set how often to export:
 
    - **[schedule]{.smallcaps}** — Choose the frequency: **Every hour**, **Every 12 hours**, **Daily**, or **Weekly**.
    - **[time (utc)]{.smallcaps}** — Choose the time of day in UTC (example: `12:00 AM`).
+
+
+::: {.column-margin}
+![Setting the schedule](configure-analytics-export-step-3.png){fig-alt="Create Analytics Export modal showing Set Schedule step with Daily schedule and 12:00 am UTC." .screenshot}
+:::
 
 9. Click **Create Analytics Export**.
 
